--- a/app/views/oppties/edit.html.erb
+++ b/app/views/oppties/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @oppty %> |
-<%= link_to 'Back', oppties_path %>
+<%= link_to 'Back', browse_index_path %>
