changed a upload_crm to crm

--- a/app/views/crm/index.html.erb
+++ b/app/views/crm/index.html.erb
@@ -12,6 +12,8 @@
 
 </form>
 
+<%= link_to "Download New CRM Data", "download" %>
+
 <!-- JavaScript Includes -->
 <%= javascript_include_tag('jquery.knob.js') %>
 <%= javascript_include_tag('jquery.ui.widget.js') %>
