--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
               <li ><a href=<%= allocated_tasks_index_path%>>Allocated Tasks</a></li>
               <li><a href=<%= browse_index_path%> >Browse</a></li>
               <li><a href=<%= invalid_data_index_path%>>Invalid Data</a></li>
-              <li><a href=<%= upload_crm_index_path%>>Upload CRM</a></li>
+              <li><a href=<%= crm_index_path%>>Upload CRM</a></li>
               <li><a href=<%= statistics_index_path%>>Statistics</a></li>
           <%end%>
           <li><a href=<%= history_index_path%>>History</a></li>
