added changes to my tasks

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
               <li><a href=<%= crm_index_path%>>Upload CRM</a></li>
               <li><a href=<%= statistics_index_path%>>Statistics</a></li>
           <%end%>
-          <li><a href=<%= history_index_path%>>History</a></li>
+          <li><a href=<%= histories_path%>>History</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li ><a>Welcome <%=session[:username] %></a></li>
