--- a/app/views/histories/index.html.erb
+++ b/app/views/histories/index.html.erb
@@ -1,12 +1,9 @@
-<h1>Listing histories</h1>
+<h1>History</h1>
 
 <table>
   <thead>
     <tr>
       <th>Opptyname</th>
-      <th>Opptyid</th>
-      <th>Oppty</th>
-      <th>User</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,13 +11,8 @@
   <tbody>
     <% @histories.each do |history| %>
       <tr>
-        <td><%= history.opptyName %></td>
-        <td><%= history.opptyId %></td>
-        <td><%= history.oppty %></td>
-        <td><%= history.user %></td>
+        <td></td><%= link_to history.opptyName, oppties_path(oppty_id:history.oppty) %></td>
         <td><%= link_to 'Show', history %></td>
-        <td><%= link_to 'Edit', edit_history_path(history) %></td>
-        <td><%= link_to 'Destroy', history, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
