--- a/app/views/oppties/show.html.erb
+++ b/app/views/oppties/show.html.erb
@@ -1,110 +1,51 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Opptyid:</strong>
-  <%= @oppty.opptyId %>
-</p>
+<body>
+<div class="container">
+  <!-- Main component for a primary marketing message or call to action -->
+  <div class="jumbotron">
+    <h1 class="op-title"><%= @oppty.opptyName%></h1>
+    <p><b>IDIQ CA:</b> <%= @oppty.idiqCA%></p>
+    <p><b>Status:</b> <%= @oppty.status2%></p>
+    <p><b>Value:</b> <%= @oppty.value%></p>
+    <p><b>Percentage Win:</b> <%= @oppty.pWin%></p>
+    <p><b>RFP Date:</b> <%= @oppty.rfpDate%></p>
+    <p><b>Award Date:</b><%= @oppty.awardDate%></p>
+    <p><b>Submit Date:</b> <%= @oppty.submitDate%></p>
+    <p><b>Number of Writers:</b> <%= @oppty.numWriters%></p>
+    <p><b>Capture Manager:</b> <%= @oppty.captureMgr%></p>
+    <p><b>Program Manager:</b> <%= @oppty.programMgr%></p>
+    <p><b>SSL Organization:</b> <%= @oppty.sslOrg%></p>
+    <p><b>Technical Lead:</b> <%= @oppty.technicalLead%></p>
+    <p><b>SLL Architect:</b> <%= @oppty.sslArch%></p>
+    <p><b>ED:</b> <%= @oppty.ed%></p>
+    <p><b>ON:</b> <%= @oppty.on%></p>
+    <p><b>ATE:</b> <%= @oppty.ate%></p>
+    <p><b>SL Comments:</b> <%= @oppty.slComments%></p>
+    <p>
+    <div class="btn-container">
+      <a class="btn btn-lg btn-primary btn-left" href=<%=url_for(:back)%> role="button">Cancel</a>
+      <%if session[:role]=="writer" %>
+        <form method="post" action= <%=user_oppties_path(oppty_id: @oppty.id)%> >
+            <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+            <button class="btn btn-lg btn-primary btn-right" type="submit">Add</button>
+        </form>
+      <%end%>
+      <%if session[:role]=="manager" %>
+          <a class="btn btn-lg btn-primary btn-center" href=<%= edit_oppty_path(@oppty)%>  role="button">Edit</a>
+          <a class="btn btn-lg btn-primary btn-right" role="button">Assign</a>
+      <%end%>
+    </div>
+    </p>
+  </div>
 
-<p>
-  <strong>Opptyname:</strong>
-  <%= @oppty.opptyName %>
-</p>
-
-<p>
-  <strong>Idiqca:</strong>
-  <%= @oppty.idiqCA %>
-</p>
-
-<p>
-  <strong>Status2:</strong>
-  <%= @oppty.status2 %>
-</p>
-
-<p>
-  <strong>Value:</strong>
-  <%= @oppty.value %>
-</p>
-
-<p>
-  <strong>Pwin:</strong>
-  <%= @oppty.pWin %>
-</p>
-
-<p>
-  <strong>Capturemgr:</strong>
-  <%= @oppty.captureMgr %>
-</p>
-
-<p>
-  <strong>Programmgr:</strong>
-  <%= @oppty.programMgr %>
-</p>
-
-<p>
-  <strong>Proposalmgr:</strong>
-  <%= @oppty.proposalMgr %>
-</p>
-
-<p>
-  <strong>Sslorg:</strong>
-  <%= @oppty.sslOrg %>
-</p>
-
-<p>
-  <strong>Technicallead:</strong>
-  <%= @oppty.technicalLead %>
-</p>
-
-<p>
-  <strong>Sslarch:</strong>
-  <%= @oppty.sslArch %>
-</p>
-
-<p>
-  <strong>Ed:</strong>
-  <%= @oppty.ed %>
-</p>
-
-<p>
-  <strong>On:</strong>
-  <%= @oppty.on %>
-</p>
-
-<p>
-  <strong>Ate:</strong>
-  <%= @oppty.ate %>
-</p>
-
-<p>
-  <strong>Slcomments:</strong>
-  <%= @oppty.slComments %>
-</p>
-
-<p>
-  <strong>Rfpdate:</strong>
-  <%= @oppty.rfpDate %>
-</p>
-
-<p>
-  <strong>Awarddate:</strong>
-  <%= @oppty.awardDate %>
-</p>
-
-<p>
-  <strong>Submitdate:</strong>
-  <%= @oppty.submitDate %>
-</p>
-
-<p>
-  <strong>Numwriters:</strong>
-  <%= @oppty.numWriters %>
-</p>
-
-<%= link_to 'Edit', edit_oppty_path(@oppty) %> |
-<%= link_to 'Back', url_for(:back) %>
-<%if session[:role]=="writer" %>
-    <%= button_to 'Add', user_oppties_path(oppty_id: @oppty.id) %>
-<%end%>
-<%if session[:role]=="manager" %>
-    <%= button_to 'Assign', nil %>
-<%end%>
+</div> <!-- /container -->
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+<!--script src="../../assets/js/ie10-viewport-bug-workaround.js"></script-->
+</body>
