--- a/app/views/invalid_entry/index.html.erb
+++ b/app/views/invalid_entry/index.html.erb
@@ -1,3 +1,4 @@
 <% if notice %>
     <p id="notice"><%= notice %></p>
 <% end %>
+<a class="btn btn-lg btn-primary btn-left" href=<%=url_for(:back)%> role="button">Back</a>
