--- a/app/views/histories/index.html.erb
+++ b/app/views/histories/index.html.erb
@@ -1,23 +1,13 @@
 <h1>History</h1>
 
 <table>
-  <thead>
-    <tr>
-      <th>Opptyname</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
   <tbody>
     <% @histories.each do |history| %>
       <tr>
-        <td></td><%= link_to history.opptyName, oppties_path(oppty_id:history.oppty) %></td>
-        <td><%= link_to 'Show', history %></td>
+        <td></td><%= link_to history.oppty.opptyName, history.oppty %></td>
+        <br>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New History', new_history_path %>
