--- a/app/assets/stylesheets/browse.css.scss
+++ b/app/assets/stylesheets/browse.css.scss
@@ -1,3 +1,28 @@
 // Place all the styles related to the Browse controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.upper-search-box {
+	
+}
+
+.browse-bg {
+	background-color: #F8F8F8;
+}
+
+.search-form {
+	float: left;
+}
+
+.btn-search {
+	padding: 0px; 
+	float:right;
+	border-style: none; 
+	background-color: #005DA0;
+	width: 36px; height: 36px;
+}
+
+.inner-search-bar {
+	width: 1242px;
+	height: 150px;
+	background-color: #4C4C4C !important;
+}
