--- a/app/views/browse/index.html.erb
+++ b/app/views/browse/index.html.erb
@@ -1,7 +1,7 @@
 <div class="jumbotron">
 <div class="upper-search-box">
 	<div class="inner-search-bar">
-		<form method="get" action="..."> 
+		<form method="get" action="..." class="search-form"> 
 			<table cellpadding="0px" cellspacing="0px"> 
 			<tr> 
 			<td style="border-style:solid none solid solid;border-color:#4B7B9F;border-width:1px; font-size:24px;">
