style changes, removed remember me button

--- a/app/assets/stylesheets/browse.css.scss
+++ b/app/assets/stylesheets/browse.css.scss
@@ -5,6 +5,12 @@
 	
 }
 
+.jumbotron {
+	padding-top: 0px !important;
+	margin-right: 20px !important;
+	margin-left: 20px !important;
+}
+
 .browse-bg {
 	background-color: #F8F8F8;
 }
@@ -24,7 +30,7 @@
 }
 
 .inner-search-bar {
-	width: 1242px;
+	width: 1202px;
 	height: 150px;
 	background-color: #4C4C4C !important;
 }
