--- a/app/views/oppties/show.html.erb
+++ b/app/views/oppties/show.html.erb
@@ -22,6 +22,11 @@
     <p><b>ON:</b> <%= @oppty.on%></p>
     <p><b>ATE:</b> <%= @oppty.ate%></p>
     <p><b>SL Comments:</b> <%= @oppty.slComments%></p>
+    <p><b>SL Director:</b> <%= @oppty.slDir%></p>
+    <p><b>Lead Estimator:</b> <%= @oppty.leadEstim%></p>
+    <p><b>Engaged:</b> <%= @oppty.engaged%></p>
+    <p><b>Solution:</b> <%= @oppty.solution%></p>
+    <p><b>Estimate:</b> <%= @oppty.estimate%></p>
     <p>
     <div class="btn-container" style="margin:20px">
       <a class="btn btn-lg btn-primary btn-left" href=<%=url_for(:back)%> role="button" style="color:white">Cancel</a>
