--- a/app/views/crm/index.html.erb
+++ b/app/views/crm/index.html.erb
@@ -4,6 +4,7 @@
 
     <a>Browse</a>
     <input type="file" id="upl" name="upl" multiple />
+    <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
   </div>
 
   <ul>
