--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Statistics#index</h1>
-<p>Find me in app/views/statistics/index.html.erb</p>
+<div id="chartdiv"></div>
+
+<!-- JavaScript Includes -->
+<%= javascript_include_tag('amcharts.js') %>
+<%= javascript_include_tag('serial.js') %>
+<%= javascript_include_tag('light.js') %>
+<%= javascript_include_tag('chart.js') %>
+
+	
+
