--- a/app/views/oppties/show.html.erb
+++ b/app/views/oppties/show.html.erb
@@ -38,7 +38,7 @@
       <%end%>
       <%if session[:role]=="manager" %>
           <a class="btn btn-lg btn-primary btn-center" href=<%= edit_oppty_path(@oppty)%>  role="button" style="color:white">Edit</a>
-          <a class="btn btn-lg btn-primary btn-right" role="button" style="color:white">Assign</a>
+          <a class="btn btn-lg btn-primary btn-right" href=<%= assign_index_path%> role="button" style="color:white">Assign</a>
       <%end%>
     </div>
     </p>
