--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -1,99 +1,107 @@
-<div id="chartdiv"></div>
+<html lang="en">
+  <head>
+    <title>Statistics</title>
+  </head>
+  <body>
+    <div class="jumbotron">
+      <div class="chart-container">
+        <h2 class="chart-title">RFP per Month</h2>
+        <div id="chartdiv"></div>
+      </div>
+    </div>
 
-<!-- JavaScript Includes -->
-<%= javascript_include_tag('amcharts.js') %>
-<%= javascript_include_tag('serial.js') %>
-<%= javascript_include_tag('light.js') %>
-<%= javascript_include_tag('dataloader.min.js') %>
-<%= javascript_include_tag('chart.js') %>
+    <!-- JavaScript Includes -->
+    <%= javascript_include_tag('amcharts.js') %>
+    <%= javascript_include_tag('serial.js') %>
+    <%= javascript_include_tag('light.js') %>
+    <%= javascript_include_tag('dataloader.min.js') %>
+    <%= javascript_include_tag('chart.js') %>
 
-<script>
-  var chartdata = [ {
-    "country": "USA",
-    "visits": 2025
-  }, {
-    "country": "China",
-    "visits": 1882
-  }, {
-    "country": "Japan",
-    "visits": 1809
-  }, {
-    "country": "Germany",
-    "visits": 1322
-  }, {
-    "country": "UK",
-    "visits": 1122
-  }, {
-    "country": "France",
-    "visits": 1114
-  }, {
-    "country": "India",
-    "visits": 984
-  }, {
-    "country": "Spain",
-    "visits": 711
-  }, {
-    "country": "Netherlands",
-    "visits": 665
-  }, {
-    "country": "Russia",
-    "visits": 580
-  }, {
-    "country": "South Korea",
-    "visits": 443
-  }, {
-    "country": "Canada",
-    "visits": 441
-  }, {
-    "country": "Brazil",
-    "visits": 395
-  } ]
+    <script>
+      var chartdata = [ {
+        "Month": "January",
+        "visits": 2025
+      }, {
+        "Month": "February",
+        "visits": 1882
+      }, {
+        "Month": "March",
+        "visits": 1809
+      }, {
+        "Month": "April",
+        "visits": 1322
+      }, {
+        "Month": "May",
+        "visits": 1122
+      }, {
+        "Month": "June",
+        "visits": 1114
+      }, {
+        "Month": "July",
+        "visits": 984
+      }, {
+        "Month": "August",
+        "visits": 711
+      }, {
+        "Month": "September",
+        "visits": 665
+      }, {
+        "Month": "October",
+        "visits": 580
+      }, {
+        "Month": "November",
+        "visits": 443
+      }, {
+        "Month": "December",
+        "visits": 441
+      }]
 
-  var chart = AmCharts.makeChart( "chartdiv", {
-  "type": "serial",
-  "theme": "light",
-  "dataProvider": chartdata,
-  "valueAxes": [ {
-    "gridColor": "#FFFFFF",
-    "gridAlpha": 0.2,
-    "dashLength": 0
-  } ],
-  "gridAboveGraphs": true,
-  "startDuration": 1,
-  "graphs": [ {
-    "balloonText": "[[category]]: <b>[[value]]</b>",
-    "fillAlphas": 0.8,
-    "lineAlpha": 0.2,
-    "type": "column",
-    "valueField": "visits"
-  } ],
-  "chartCursor": {
-    "categoryBalloonEnabled": false,
-    "cursorAlpha": 0,
-    "zoomable": false
-  },
-  "categoryField": "country",
-  "categoryAxis": {
-    "gridPosition": "start",
-    "gridAlpha": 0,
-    "tickPosition": "start",
-    "tickLength": 20
-  },
-  "export": {
-    "enabled": true
-  }
-} );
+      var chart = AmCharts.makeChart( "chartdiv", {
+      "type": "serial",
+      "theme": "light",
+      "dataProvider": chartdata,
+      "valueAxes": [ {
+        "gridColor": "#8E8E8E",
+        "gridAlpha": 0.3,
+        "dashLength": 0
+      } ],
+      "gridAboveGraphs": true,
+      "startDuration": 1,
+      "graphs": [ {
+        "balloonText": "[[category]]: <b>[[value]]</b>",
+        "fillAlphas": 0.8,
+        "lineAlpha": 0.2,
+        "type": "column",
+        "valueField": "visits"
+      } ],
+      "chartCursor": {
+        "categoryBalloonEnabled": false,
+        "cursorAlpha": 0,
+        "zoomable": false
+      },
+      "categoryField": "Month",
+      "categoryAxis": {
+        "gridPosition": "start",
+        "gridAlpha": 0,
+        "tickPosition": "start",
+        "tickLength": 20
+      },
+      "export": {
+        "enabled": true
+      }
+    } );
 
-function createClass(name,rules){
-    var style = document.createElement('style');
-    style.type = 'text/css';
-    document.getElementsByTagName('head')[0].appendChild(style);
-    if(!(style.sheet||{}).insertRule) 
-        (style.styleSheet || style.sheet).addRule(name, rules);
-    else
-        style.sheet.insertRule(name+"{"+rules+"}",0);
-}
-createClass('html body #chartdiv div.amcharts-main-div div.amcharts-chart-div a',"visibility: hidden !important;");
-</script>
-	
+    function createClass(name,rules){
+        var style = document.createElement('style');
+        style.type = 'text/css';
+        document.getElementsByTagName('head')[0].appendChild(style);
+        if(!(style.sheet||{}).insertRule) 
+            (style.styleSheet || style.sheet).addRule(name, rules);
+        else
+            style.sheet.insertRule(name+"{"+rules+"}",0);
+    }
+    createClass('html body #chartdiv div.amcharts-main-div div.amcharts-chart-div a',"visibility: hidden !important;");
+    </script>
+  </body>
+</html>
 
