--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -9,12 +9,24 @@
         <div id="chartdiv"></div>
       </div>
       <div class="selector-container col-md-2">
-        <p class="selector-label">Select Year: </p>
-        <div>
-          <select class="selector">
-            <option value="2015">2015</option>
-          </select>
-          <a href="#" class="btn btn-info btn-lg glyphicon selector-button">&#xe092;</a>
+        <div class="selector-year-container">
+          <p class="selector-label">Select Year: </p>
+          <div>
+            <select class="selector">
+              <option value="1">All</option>
+              <option value="2015">2015</option>
+              <option value="2014">2014</option>
+            </select>
+            <a href="#" class="btn btn-info btn-lg glyphicon selector-button">&#xe092;</a>
+          </div>  
+        </div>
+        <br>
+        <div class="graph-selector">
+          <p class="selector-label selector-label-graph">Select Graph: </p>
+            <ul class="select-list">
+              <li class="select-list-item"><a href="#" class="select-list-text">RFP by Months</a></li>
+              <li class="select-list-item"><a href="#" class="select-list-text">Millions Awarded by Month</a></li>
+            </ul>
         </div>
       </div>
     </div>
