Browse css/html files has been modified

--- a/app/assets/stylesheets/browse.css.scss
+++ b/app/assets/stylesheets/browse.css.scss
@@ -7,12 +7,8 @@
 
 .jumbotron {
 	padding-top: 0px !important;
-	margin-right: 20px !important;
-	margin-left: 20px !important;
-}
-
-.browse-bg {
-	background-color: #F8F8F8;
+	margin-right: 50px !important;
+	margin-left: 50px !important;
 }
 
 .search-form {
@@ -30,7 +26,18 @@
 }
 
 .inner-search-bar {
-	width: 1202px;
 	height: 150px;
 	background-color: #4C4C4C !important;
+}
+
+.title {
+	font-size: 250%;
+	text-align: center;
+}
+
+.search-field {
+	border:0px solid; 
+	height:36px; 
+	padding:0px 0px; 
+	position:relative;
 }
